Fix alignment of the theme buttons

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -11,7 +11,7 @@
 .Header-theme-btns {
   position: absolute;
   top: 32px;
-  right: 10%;
+  right: 8%;
   ul {
     gap: 15px;
   }
